# Predictive_Maintenance_System

./: .dockerignore  Dockerfile  README.md  example_predict.py  notebook.ipynb  predict.py  predictive_maintenance_model.pth  pyproject.toml  request_example.json  scaler.pkl  train.py
.ipynb_checkpoints/: main-checkpoint.py  notebook-checkpoint.ipynb
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
