[project]
name = "predictive-maintenance-for-aircraft-enginese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]
