[project]
name = "predictive-maintenance-for-aircraft-enginese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.8.0",
    "requests>=2.32.5",
]
